--- a/templates/test.html
+++ b/templates/test.html
@@ -16,10 +16,15 @@
         console.log("main button is clicked");
         var songName = $('#text_box')[0].value;
         var model = $("input[name='model_selection']:checked").val();
+        const data = {chosen_model: model};
         // get request
         $.ajax({
-          // put your api endpoint here
-          url: 'https://project-billboard-api.herokuapp.com/predict/'+songName+'/'+model,
+            // put your api endpoint here
+            url: 'https://project-billboard-api.herokuapp.com/predict/'+songName,
+            type: "POST",
+            data: JSON.stringify(data),
+            dataType: "json",
+            contentType: 'application/json',
           // function callback after success ajax request
           success: function(data) {
             console.log(data)
@@ -27,6 +32,9 @@
             document.getElementById("predict_result").innerHTML = "The probability of "+songName+" being a hit song is: "+data["popularity"];
             $('#text_box')[0].value = "";
             // $('#text_box')[0].value = JSON.stringify(data)
+          },
+          error: function(error) {
+            console.log('Error ${error}')
           },
         });
 
