--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#">Home</a>
+            <a class="nav-link" id="nav_home" href="#">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" id="nav_models" href="#models">Models</a>
