--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav" style="background-color:rgb(0,0,0,0.8);">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top" style="color:#FF00FF;">Project Billboard</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top" style="color:#EE82EE;">Project Billboard</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -80,7 +80,7 @@
           </div>
         <p id="predict_result" style="color:white;"></p>
         </div>
-        <button id="main_button" class="btn btn-primary btn-xl text-uppercase" href="#services" style="background-color:  #9400D3; border-color:  #9400D3;">Predict</a>
+        <button id="main_button" class="btn btn-primary btn-xl text-uppercase" href="#services">Predict</a>
       </div>
     </div>
   </header>
@@ -98,26 +98,29 @@
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-chart-bar fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Logistic Regression</h4>
           <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+            <i class="fab fa-hubspot fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">K Nearest Neighbours</h4>
           <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-rocket fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">XGBoost</h4>
           <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a>
         </div>
       </div>
     </div>
@@ -216,23 +219,23 @@
       <div class="row">
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
-            <h4>Member 1</h4>
+            <img class="mx-auto rounded-circle" src="https://media.licdn.com/dms/image/C5103AQHzxSoSpkhQQg/profile-displayphoto-shrink_200_200/0?e=1562803200&v=beta&t=ruVIdg1OVof_d6_P5FUJ6oRWZEs-kbi8SVQXzbyoBmc" alt="">
+            <h4>Tan Jin</h4>
             <p class="text-muted">The Cool Kid</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-twitter"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.linkedin.com/in/tan-jin-4b5a07184/" target="_blank">
                   <i class="fab fa-linkedin-in"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://github.com/tjtanjin/" target="_blank">
+                  <i class="fab fa-github"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.facebook.com/TJTanJin/" target="_blank">
+                  <i class="fab fa-facebook-f"></i>
                 </a>
               </li>
             </ul>
@@ -240,23 +243,23 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
+            <img class="mx-auto rounded-circle" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="">
             <h4>Member 2</h4>
             <p class="text-muted">The Funny Kid</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="#">
-                  <i class="fab fa-twitter"></i>
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#">
+                  <i class="fab fa-github"></i>
                 </a>
               </li>
               <li class="list-inline-item">
                 <a href="#">
                   <i class="fab fa-facebook-f"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-linkedin-in"></i>
                 </a>
               </li>
             </ul>
@@ -264,23 +267,23 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
+            <img class="mx-auto rounded-circle" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="">
             <h4>Member 3</h4>
             <p class="text-muted">The Crazy Kid</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="#">
-                  <i class="fab fa-twitter"></i>
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#">
+                  <i class="fab fa-github"></i>
                 </a>
               </li>
               <li class="list-inline-item">
                 <a href="#">
                   <i class="fab fa-facebook-f"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-linkedin-in"></i>
                 </a>
               </li>
             </ul>
