--- a/templates/index.html
+++ b/templates/index.html
@@ -302,8 +302,8 @@
   <div class="modal fade" id="logistic_regression_details" tabindex="-1" role="dialog" aria-labelledby="Logistic Regression Details" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle">Logistic Regression Model</h5>
+        <div class="modal-header" style="background-color:rgb(0,0,0, 0.8);">
+          <h5 class="modal-title" id="exampleModalLongTitle" style="color:#EE82EE;">Logistic Regression Model</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -322,14 +322,16 @@
   <div class="modal fade" id="knn_details" tabindex="-1" role="dialog" aria-labelledby="KNN Details" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle">K Nearest Neighbours Model</h5>
+        <div class="modal-header" style="background-color:rgb(0,0,0, 0.8);">
+          <h5 class="modal-title" id="exampleModalLongTitle" style="color:#EE82EE;">K Nearest Neighbours Model</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-          KNN writeup
+          KNN writeup aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+          aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+          bbbbbbbbbbbb
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-primary" data-dismiss="modal" style="margin-left:auto; margin-right:auto;">Close</button>
@@ -342,8 +344,8 @@
   <div class="modal fade" id="xgboost_details" tabindex="-1" role="dialog" aria-labelledby="XGBoost Details" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle">XGBoost Model</h5>
+        <div class="modal-header" style="background-color:rgb(0,0,0, 0.8);">
+          <h5 class="modal-title" id="exampleModalLongTitle" style="color:#EE82EE;">XGBoost Model</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
