--- a/templates/index.html
+++ b/templates/index.html
@@ -95,7 +95,7 @@
         </div>
       </div>
       <div class="row text-center">
-        <div class="col-md-4">
+        <div class="col-md-4" style="height:420px;">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-chart-bar fa-stack-1x fa-inverse"></i>
@@ -104,7 +104,7 @@
           <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
           <button class="btn btn-primary btn-lg" href="#" role="button" data-toggle="modal" data-target="#logistic_regression_details">Learn more &raquo;</button>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" style="height:420px;">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fab fa-hubspot fa-stack-1x fa-inverse"></i>
@@ -113,7 +113,7 @@
           <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
           <button class="btn btn-primary btn-lg" href="#" role="button" data-toggle="modal" data-target="#knn_details">Learn more &raquo;</button>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" style="height:420px;">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-rocket fa-stack-1x fa-inverse"></i>
@@ -329,9 +329,7 @@
           </button>
         </div>
         <div class="modal-body">
-          KNN writeup aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-          aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-          bbbbbbbbbbbb
+          KNN writeup
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-primary" data-dismiss="modal" style="margin-left:auto; margin-right:auto;">Close</button>
