--- a/templates/index.html
+++ b/templates/index.html
@@ -127,7 +127,7 @@
   </section>
 
   <!-- About -->
-  <section id="about">
+  <section class="bg-light" id="about">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -144,7 +144,7 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>2009-2011</h4>
+                  <h4>2nd April 2019</h4>
                   <h4 class="subheading">Beginning of Project...</h4>
                 </div>
                 <div class="timeline-body">
@@ -158,7 +158,7 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>March 2011</h4>
+                  <h4>18th April 2019</h4>
                   <h4 class="subheading">Song scraping...</h4>
                 </div>
                 <div class="timeline-body">
@@ -172,7 +172,7 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>December 2012</h4>
+                  <h4>29th April 2019</h4>
                   <h4 class="subheading">Analysis of features...</h4>
                 </div>
                 <div class="timeline-body">
@@ -186,7 +186,7 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>July 2014</h4>
+                  <h4>6th May 2019</h4>
                   <h4 class="subheading">Training of models...</h4>
                 </div>
                 <div class="timeline-body">
@@ -208,7 +208,7 @@
   </section>
 
   <!-- Team -->
-  <section class="bg-light" id="team">
+  <section id="team">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
