Updated close button color.

--- a/templates/index.html
+++ b/templates/index.html
@@ -304,7 +304,7 @@
       <div class="modal-content">
         <div class="modal-header" style="background-color:rgb(0,0,0, 0.8);">
           <h5 class="modal-title" id="exampleModalLongTitle" style="color:#EE82EE;">Logistic Regression Model</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="color:#EE82EE; opacity:0.8;">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
@@ -324,7 +324,7 @@
       <div class="modal-content">
         <div class="modal-header" style="background-color:rgb(0,0,0, 0.8);">
           <h5 class="modal-title" id="exampleModalLongTitle" style="color:#EE82EE;">K Nearest Neighbours Model</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="color:#EE82EE; opacity:0.8;">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
@@ -344,7 +344,7 @@
       <div class="modal-content">
         <div class="modal-header" style="background-color:rgb(0,0,0, 0.8);">
           <h5 class="modal-title" id="exampleModalLongTitle" style="color:#EE82EE;">XGBoost Model</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="color:#EE82EE; opacity:0.8;">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
