Improved website aesthetics.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.4.0.min.js" integrity="
   sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -27,7 +26,7 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="./static/css/agency.min.css" rel="stylesheet">
+  <link href="./static/css/sp.min.css" rel="stylesheet">
 </head>
 <body>
   <!-- Navigation -->
@@ -303,7 +302,7 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header" style="background-color:rgb(0,0,0, 0.8);">
-          <h5 class="modal-title" id="exampleModalLongTitle" style="color:#EE82EE;">Logistic Regression Model</h5>
+          <h5 class="modal-title" style="color:#EE82EE;">Logistic Regression Model</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="color:#EE82EE; opacity:0.8;">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -323,7 +322,7 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header" style="background-color:rgb(0,0,0, 0.8);">
-          <h5 class="modal-title" id="exampleModalLongTitle" style="color:#EE82EE;">K Nearest Neighbours Model</h5>
+          <h5 class="modal-title" style="color:#EE82EE;">K Nearest Neighbours Model</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="color:#EE82EE; opacity:0.8;">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -343,7 +342,7 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header" style="background-color:rgb(0,0,0, 0.8);">
-          <h5 class="modal-title" id="exampleModalLongTitle" style="color:#EE82EE;">XGBoost Model</h5>
+          <h5 class="modal-title" style="color:#EE82EE;">XGBoost Model</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="color:#EE82EE; opacity:0.8;">
             <span aria-hidden="true">&times;</span>
           </button>
