--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
             <a class="nav-link" id="nav_team" href="#team">Team</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="https://github.com/tjtanjin/project_billboard/" target="_blank">Github</a>
+            <a class="nav-link" href="https://github.com/tjtanjin/project_billboard/" target="_blank">Github</a>
           </li>
         </ul>
       </div>
@@ -356,5 +356,35 @@
       </div>
     </div>
   </div>
+
+  <!-- Footer -->
+  <footer class="bg-light">
+    <div class="container bg-light">
+      <div class="row">
+        <div class="col-md-4">
+          <span class="copyright">Copyright &copy; Project Billboard 2019</span>
+        </div>
+        <div class="col-md-4">
+          <ul class="list-inline social-buttons">
+            <li class="list-inline-item">
+              <a href="https://github.com/tjtanjin/project_billboard/" target="_blank">
+                <i class="fab fa-github"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <ul class="list-inline quicklinks">
+            <li class="list-inline-item">
+              <a href="#">Privacy Policy</a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">Terms of Use</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
