Updated team members. Updated API routes.

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
             <a class="nav-link" id="nav_team" href="#team">Team</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://github.com/tjtanjin/project_billboard/" target="_blank">Github</a>
+            <a class="nav-link" href="https://github.com/tjtanjin/project_billboard_model/" target="_blank">Github</a>
           </li>
         </ul>
       </div>
@@ -242,22 +242,22 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="">
-            <h4>Member 2</h4>
+            <img class="mx-auto rounded-circle" src="https://scontent.fsin8-1.fna.fbcdn.net/v/t31.0-8/13254886_10209056212341918_6229900836130072372_o.jpg?_nc_cat=105&_nc_ht=scontent.fsin8-1.fna&oh=00c1d7ab2189027d58604d6bb495f053&oe=5D71A251" alt="">
+            <h4>Arthur Chionh</h4>
             <p class="text-muted">The Funny Kid</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.linkedin.com/in/arthur-chionh-7309a5157/" target="_blank">
                   <i class="fab fa-linkedin-in"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://github.com/artc95/" target="_blank">
                   <i class="fab fa-github"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.facebook.com/arthur95chionh/" target="_blank">
                   <i class="fab fa-facebook-f"></i>
                 </a>
               </li>
@@ -266,22 +266,17 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="">
-            <h4>Member 3</h4>
+            <img class="mx-auto rounded-circle" src="https://scontent.fsin8-2.fna.fbcdn.net/v/t1.0-9/59697866_864455247236670_473565967390081024_n.jpg?_nc_cat=103&_nc_ht=scontent.fsin8-2.fna&oh=970e73de7628675c3f3f210e635a789e&oe=5D6F4F9B" alt="">
+            <h4>Toh Yue Feng</h4>
             <p class="text-muted">The Crazy Kid</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
+                <a href="https://github.com/m3thx6" target="_blank">
                   <i class="fab fa-github"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.facebook.com/yuefeng.toh.5" target="_blank">
                   <i class="fab fa-facebook-f"></i>
                 </a>
               </li>
@@ -367,7 +362,7 @@
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
-              <a href="https://github.com/tjtanjin/project_billboard/" target="_blank">
+              <a href="https://github.com/tjtanjin/project_billboard_model/" target="_blank">
                 <i class="fab fa-github"></i>
               </a>
             </li>
