--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Song Popularity Predictor</title>
+  <title>Project Billboard</title>
   <link rel="icon" href="./static/favicon.ico" />
 
   <!-- Bootstrap core CSS -->
@@ -90,7 +90,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Models</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading text-muted">Prediction Model Types</h3>
         </div>
       </div>
       <div class="row text-center">
@@ -212,7 +212,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Project Team</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading text-muted">Contributors</h3>
         </div>
       </div>
       <div class="row">
@@ -286,7 +286,7 @@
       </div>
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
-          <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+          <p class="large text-muted">Have an idea for the project? Reach out to any of us!</p>
         </div>
       </div>
     </div>
