Now shows loading for predictions.

--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
           </div>
         <p id="predict_result" style="color:white;"></p>
         </div>
-        <button id="main_button" class="btn btn-primary btn-xl text-uppercase" href="#services">Predict</a>
+        <button id="main_button" type="button" class="btn btn-primary btn-xl btn-lg text-uppercase" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> Predicting">Predict</button>
       </div>
     </div>
   </header>
